<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Physical Web</string>
    <string name="action_config">Edit URLs</string>
    <string name="action_about">About</string>
    <string name="action_blocked">Blocked URLs</string>
    <string name="config_address_label">Address</string>
    <string name="config_edit_url_label">URL</string>
    <string name="config_save_url_button">SAVE URL</string>
    <string name="about_version_label">Version</string>
    <string name="nearby_beacon_favicon_content_description">favicon for the given URL for this entry</string>
    <string name="nearby_beacon_star_description">Toggle favorite</string>
    <string name="config_searching_for_beacons_text">Put your beacon into config mode</string>
    <string name="config_found_near_beacon">Beacon found!</string>
    <string name="config_found_far_beacon">Move Beacon closer!</string>
    <string name="config_writing_to_beacon_text">Saving to Beacon</string>
    <string name="config_url_saved">URL Saved</string>
    <string name="config_url_error">Error Saving URL</string>
    <string name="title_edit_urls">Edit URLs</string>
    <string name="title_nearby_beacons">Nearby Beacons</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="empty_nearby_beacons_list_text">Searching for beacons</string>
    <string name="empty_nearby_beacons_list_text_no_results">No beacons found</string>
    <string name="about_app_title">Physical Web</string>
    <string name="config_no_beacons_found">No beacons found</string>
    <string name="notification_view_more_beacons">VIEW MORE</string>
    <string name="config_url_read_error">Error Reading URL</string>
    <string name="bt_on">Turn Bluetooth on to broadcast</string>
    <string name="ble_os_error">Bluetooth LE advertising is not supported by your OS</string>
    <string name="no_url_error">Couldn\'t find URL to broadcast</string>
    <string name="ble_error">Bluetooth LE advertising is not supported on this device</string>
    <string name="url_broadcast">URL is broadcasting!</string>
    <string name="broadcast_notif">Physical Web is broadcasting a URL</string>
    <string name="shorten_error">Could not shorten URL</string>
    <string name="loc_permission">Needs Location permission</string>
    <string name="stop">Stop</string>
    <string name="pws_endpoint_setting_display">Physical Web Service</string>
    <string name="custom_pws_endpoint_title">Custom Physical Web Service Endpoint</string>
    <string name="custom_pws_url_display">Custom Physical Web Service URL</string>
    <string name="custom_pws_version_default">1</string>
    <string name="custom_pws_version_display">Custom Physical Web Service API version</string>
    <string name="custom_pws_api_key_display">Custom Physical Web Service API key</string>
    <string name="google_pws">Google Physical Web Service</string>
    <string name="prod_pws">Production Open Source Physical Web Service</string>
    <string name="dev_pws">Development Open Source Physical Web Service</string>
    <string name="custom_pws">Custom Physical Web Service</string>
    <string name="scan_settings_title">Scan Settings</string>
    <string name="mDNS_title">Enable mDNS</string>
    <string name="mDNS_summary">Enabling mDNS allows you to find items on the local network.</string>
    <string name="wifi_direct_title">Enable Wi-Fi Direct</string>
    <string name="wifi_direct_summary">Enabling Wi-Fi Direct allows you to find Wi-Fi beacons.</string>
    <string name="fatbeacon_title">Enable FatBeacon</string>
    <string name="fatbeacon_summary">Enabling FatBeacon allows you to find beacons that contains offline web pages.</string>
    <string name="debug_settings_title">Debug Settings</string>
    <string name="debug_view_title">Enable Debug View</string>
    <string name="debug_view_summary">Enabling debug view allows you to see more metadata and ranging data.</string>
    <string name="wifi_port_title">Wi-Fi Direct Broadcast Port</string>
    <string name="wifi_port_summary">Click to change port</string>
    <string name="unblock_button">Unblock</string>
    <string name="folder_text">Folder</string>

    <plurals name="numFoundBeacons">
        <item quantity="one">Beacon Nearby</item>
        <item quantity="other">Beacons Nearby</item>
    </plurals>
    <string name="action_settings">Settings</string>
    <string name="oob_accept_and_continue">ACCEPT &amp; CONTINUE</string>
    <string name="ranging_debug_tx_power_prefix">tx: </string>
    <string name="ranging_debug_rssi_prefix">rssi: </string>
    <string name="ranging_debug_distance_prefix">distance: </string>
    <string name="ranging_debug_region_prefix">region: </string>
    <string name="metadata_debug_rank_prefix">rank: </string>
    <string name="metadata_debug_scan_time_prefix">scan: </string>
    <string name="metadata_debug_pws_trip_time_prefix">pws: </string>
    <string name="metadata_debug_groupid_prefix">group: </string>
    <string name="summary_notification_pull_down">Pull down to see them.</string>
    <string name="url_shortening_error">URL is too long. Please use a shortener.</string>
    <string name="url_charset_error">Non-ASCII characters unsupported in URL. Please use a shortener.</string>
    <string name="error_bluetooth_support">Device does not support Bluetooth</string>
    <string name="error_api_key_no_longer_available">API key not available, please update settings.</string>
    <string name="error_pws_endpoint_not_configured_properly">Physical Web Service not configured properly. Switching to default settings.</string>
    <string name="pws_filtered_url_unknown">Other clients may filter your URL.</string>
    <string name="pws_filtered_url_http">Other clients may filter your URL because it is not HTTPS.</string>
    <string name="page_loading_message">Please wait while page loads.</string>
    <string name="page_loading_title">Loading </string>
    <string name="ble_download_error_message">Downloading of page failed, please try again</string>
    <string name="fatbeacon_description">This is web page that is downloaded from a local beacon over ble.</string>
    <string name="FatBeacon_URL">"Local BLE page @ "</string>
    <string name="fatbeacon_broadcasting_confirmation">Broadcasting FatBeacon</string>
    <string name="fatbeacon_notification_title">Physical Web is Sharing as a FatBeacon</string>
    <string name="wifi_direct_notification_title">Physical Web is sharing with WifiDirect</string>
    <string name="demos">Demos</string>
    <string name="fat_beacon_demo_title">Fat Beacon Demo</string>
    <string name="fat_beacon_demo_summary">Runs a hello world example of FatBeacon. It will broadcast over ble and show up in another Physical Web app that has FatBeacon enabled. Its title will be Hello World.</string>
</resources>
