<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:title="@string/action_settings"
          app:showAsAction="never"
          android:orderInCategory="1"
          android:id="@+id/action_settings"/>

    <item android:title="@string/action_blocked"
          app:showAsAction="never"
          android:orderInCategory="2"
          android:id="@+id/block_settings"/>

    <item android:title="@string/action_about"
          app:showAsAction="never"
          android:orderInCategory="3"
          android:id="@+id/action_about"/>

    <item android:title="@string/demos"
          app:showAsAction="never"
          android:orderInCategory="4"
          android:id="@+id/action_demos"/>
</menu>
